# waveshare-esp32-s3-smart-86-box-esphome-home-assistant

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1  build_info.json  clean.ps1  ensure_esphome_source.ps1  esp32-p4-smart-86-box.yaml  esp32-s3-box-3-ha.yaml  esp32-s3-box-3.yaml  firmware_build_info.json  generate.ps1  platformio.ini  sdkconfig.esp32-s3-box-3  sdkconfig.esp32-s3-box-3.esphomeinternal  update_build_metadata.ps1  upload.ps1  version.txt
.esphome/.espressif/service_d92d8f1e/esphome__micro-flac_0.1.1_ffa15f8a/host_examples/flac_to_wav/: CMakeLists.txt  README.md  TESTING.md
.esphome/.espressif/service_d92d8f1e/esphome__micro-flac_0.1.1_ffa15f8a/host_examples/flac_to_wav/src/: flac_to_wav.cpp
.esphome/.espressif/service_d92d8f1e/esphome__micro-flac_0.1.1_ffa15f8a/lib/micro-ogg-demuxer/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.esphome/.espressif/service_d92d8f1e/esphome__micro-flac_0.1.1_ffa15f8a/lib/micro-ogg-demuxer/include/micro_ogg/: ogg_demuxer.h
.esphome/idedata/: esp32-s3-box-3.json
.esphome/image/: 4c60a7f4  a79c11a1  f263b281
.esphome/storage/: esp32-s3-box-3.yaml.json
.pioenvs/esp32-s3-box-3/: .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  bootloader.elf  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  idedata.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  ldgen_libraries_pio  longcmd-887ec809f997970151869bcd336734ee  longcmd-cb150f066060eb2ccd8abf8ba51a7a28  memory.ld  project_description.json  sections.ld  x509_crt_bundle.S
.pioenvs/esp32-s3-box-3/bootloader/: CMakeCache.txt  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
.pioenvs/esp32-s3-box-3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
.pioenvs/esp32-s3-box-3/esp-idf/: cmake_install.cmake
.pioenvs/esp32-s3-box-3/gdbinit/: gdbinit  prefix_map  symbols
local_components/axp2101_powerkey/: __init__.py
local_components/mipi_rgb/: mipi_rgb.cpp
local_components/waveshare_s3_86_lcd_preinit/: __init__.py  waveshare_s3_86_lcd_preinit.cpp  waveshare_s3_86_lcd_preinit.h
src/: esphome.h  idf_component.yml
(+480 files in other folders)
